tooldef/org.eclipse.escet.tooldef.tests/tests/tchecker/cond_non_bool.tooldef
//////////////////////////////////////////////////////////////////////////////
// Copyright (c) 2010, 2020 Contributors to the Eclipse Foundation
//
// See the NOTICE file(s) distributed with this work for additional
// information regarding copyright ownership.
//
// This program and the accompanying materials are made available
// under the terms of the MIT License which is available at
// https://opensource.org/licenses/MIT
//
// SPDX-License-Identifier: MIT
//////////////////////////////////////////////////////////////////////////////

// if/elif conditions

if null:
elif null:
elif true:
elif null:
else
end

// while conditions
while true:
end

while null:
end

while "a":
end

while <bool?>null:
end
